--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "NODE_ENV=test npm run mocha",
-    "mocha": "NODE_ENV=test mocha 'spec/*_spec.js'",
+    "mocha": "NODE_ENV=test mocha 'spec/*-spec.js'",
     "mocha1": "NODE_ENV=test mocha"
   },
   "repository": {
